# CaroloCup

./: .gitignore  README.md
2013-CaroloCup/sources/OpenDaVINCI-CaroloCup/carolocup/: CMakeLists.txt
2013-CaroloCup/sources/OpenDaVINCI-CaroloCup/carolocup/UDP_Server/: serialport.cpp  udpserver.cpp
2014-CaroloCup/sources/OpenDaVINCI-msv/: CMakeLists.txt  NEWS
2014-CaroloCup/sources/OpenDaVINCI-msv/examples/: CMakeLists.txt
2014-CaroloCup/sources/OpenDaVINCI-msv/hesperia/: CMakeLists.txt
2014-CaroloCup/sources/OpenDaVINCI-msv/supercomponent/: CMakeLists.txt  configuration
2015-CaroloCup/sources/OpenDaVINCI-msv/libvehiclecontext/: CMakeLists.txt
2015-CaroloCup/sources/STM32F4/embedded/: CMakeLists.txt
2016-CaroloCup/: 2016-CaroloCup.kdev4  CMakeLists.txt  ChangeLog  README.md  configuration
2016-CaroloCup/.kdev4/: 2016-CaroloCup.kdev4
2016-CaroloCup/LaneDetectionAlgorithm/: .gitignore  CMakeCache.txt  CMakeLists.txt  LaneDetectionAlgorithm  Makefile  cmake_install.cmake  main.cpp  main.h  measure_time.h
2016-CaroloCup/cmake.Modules/: CompileFlags.cmake  FindAutomotiveData.cmake  FindOpenCV.cmake  FindUEYE.cmake
2016-CaroloCup/csvexporter/: CMakeLists.txt
2016-CaroloCup/csvexporter/apps/: csvexportsensor.cpp
2016-CaroloCup/csvexporter/include/: CsvExporter.h  CsvExporterSensor.h
2016-CaroloCup/csvexporter/src/: CsvExporter.cpp  CsvExporterSensors.cpp
2016-CaroloCup/driver/: CMakeLists.txt
2016-CaroloCup/driver/apps/: driver.cpp  improvedDriver_module.cpp
2016-CaroloCup/driver/driver/: CMakeLists.txt
2016-CaroloCup/driver/driver/apps/: driver.cpp
2016-CaroloCup/driver/driver/src/: LaneFollowingDriver.cpp  ParkingDriver.cpp
2016-CaroloCup/driver/include/: Driver.h  DriverGeneric.h  DriverManager.h  Driver_Improved.h  Driver_victor.h  LaneFollowingDriver.h  ParkingDriver.h  laneDriver.h  obstacleDriver.h
2016-CaroloCup/driver/src/: Driver.cpp  DriverGeneric.cpp  DriverManager.cpp  Driver_Improved.cpp  Driver_victor.cpp  LaneFollowingDriver.cpp  ParkingDriver.cpp  laneDriver.cpp  obstacleDriver.cpp
2016-CaroloCup/driver/testsuites/: DriverTestSuite.h
2016-CaroloCup/lanedetector/: CMakeLists.txt
2016-CaroloCup/lanedetector-cameraplayback/: CMakeLists.txt  lanedetector-cameraplayback.cpp  ratio-check.h
2016-CaroloCup/lanedetector/Lane Detection Algorithm/current/: CMakeLists.txt  LaneDetector.cpp  LineDetector.cpp  LineDetector.h  lanedetector.cpp  lanedetector.h
2016-CaroloCup/lanedetector/Lane Detection Algorithm/original/: main.cpp
2016-CaroloCup/lanedetector/LaneDetectionAlgorithm/current/: .gitignore  CMakeLists.txt  README  main.cpp
2016-CaroloCup/lanedetector/LaneDetectionAlgorithm/original/: main.cpp  main.h
2016-CaroloCup/lanedetector/LaneDetectionAlgorithm/refactoring/: CMakeLists.txt
2016-CaroloCup/lanedetector/VPGrapher/: .gitignore  index.html  print-csv.php  scripts.js  style.css
2016-CaroloCup/lanedetector/VPGrapher/data/: drawgraph.m
2016-CaroloCup/lanedetector/VPGrapher/scenarios/: dashedlinesmissing.csv  obstacle.csv
2016-CaroloCup/lanedetector/apps/: Benchmark.cpp  BenchmarkCompare.cpp  LaneDetectorToCSVExtractor.cpp  lanedetector-demo.cpp
2016-CaroloCup/lanedetector/include/: Benchmark.h  BenchmarkCompare.h  LaneDetector.h  LaneDetector_inspection.h  LineDetector.h  LineDetectorTypes.h  Transforms.h  bsxfun.h  nnRoadAngleCalc_terminate.h
2016-CaroloCup/lanedetector/refactoring/: CaroloCup-CameraPlayback.cpp  LaneDetector.h  LineDetector.cpp  LineDetector.h
2016-CaroloCup/lanedetector/src/: Benchmark.cpp  LaneDetector.cpp  LaneDetector_inspection.cpp  LineDetector.cpp
2016-CaroloCup/lanedetector/testsuites/: LaneDetectorTestSuite.h
2016-CaroloCup/msv-data/: CMakeLists.txt
2016-CaroloCup/msv-data/include/: LaneDetectionData.h
2016-CaroloCup/msv-data/src/: LaneDetectionData.cpp
2016-CaroloCup/msv-data/testsuites/: SensorBoardTestSuite.h
2016-CaroloCup/proxy/: CMakeLists.txt
2016-CaroloCup/proxy/Arduino/CaroloCar/: CaroloCar.ino
2016-CaroloCup/proxy/apps/: proxy.cpp
2016-CaroloCup/proxy/include/: ArduinoMegaProtocol.h  Camera.h  Proxy.h  sensorProtocol.h  simple.pb  simple.pb.h  simple.proto
2016-CaroloCup/proxy/src/: ArduinoMegaProtocol.cpp  Camera.cpp  OpenCVCamera.cpp  Proxy.cpp  SerialProtocolSample.cpp  sensorProtocol.cpp  simple.pb.c  uEyeCamera.cpp
2016-CaroloCup/proxy/testsuites/: ProxyTestSuite.h
2016-CaroloCup/studies/: CMakeLists.txt
2016-CaroloCup/studies/2015-lanedetectorreplay/: CMakeLists.txt
2016-CaroloCup/studies/2015-lanedetectorreplay/apps/: 2015-lanedetectorreplay.cpp
2016-CaroloCup/studies/2015-lanedetectorreplay/include/: LaneDetectorReplaySimulation.h
2016-CaroloCup/studies/2015-lanedetectorreplay/resources/: straightroad.rec
2016-CaroloCup/studies/2015-lanedetectorreplay/src/: LaneDetectorReplaySimulation.cpp
2016-CaroloCup/studies/2015-lanedetectorreplay/testsuites/: LaneDetectorReplaySimulationTestSuite.h
Legendary/project/STM32F4/host-tools/: CMakeLists.txt
sources/OpenDaVINCI-msv/carolocup2013/cc-data/: CMakeLists.txt
sources/OpenDaVINCI-msv/carolocup2013/extradriver/: CMakeLists.txt
sources/OpenDaVINCI-msv/cockpit/: CMakeLists.txt  cockpit_de_DE.ts  cockpit_en_US.ts
sources/OpenDaVINCI-msv/cockpit/include/: Cockpit.h  QtIncludes.h
sources/OpenDaVINCI-msv/hesperia/: CMakeLists.txt
sources/OpenDaVINCI-msv/hesperia/cockpit/: cockpit_de_DE.ts  cockpit_en_US.ts
sources/OpenDaVINCI-msv/hesperia/libhesperia/: CMakeLists.txt
sources/OpenDaVINCI-msv/hesperia/sll/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/UDP_Server/: CMakeLists.txt  main.cpp  serialport.h  udpserver.cpp  udpserver.h
sources/OpenDaVINCI-msv/msv/VCR/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/driver/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/lanedetector/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/msv-data/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/proxy/: CMakeLists.txt
sources/OpenDaVINCI-msv/msv/proxy-STM32F4/: CMakeLists.txt
sources/OpenDaVINCI-msv/tools/player/: CMakeLists.txt
(+3109 files in other folders)
